# C-Guide-For-Final-Exam-Spring-2022

.coursecreator/course/: course.json
StructureOfCode/SimplePrint/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
StructureOfCode/SimplePrint/src/: simplePrint.c
StructureOfCode/SimplePrint/test/: output.txt
Variables/: lesson-info.yaml  lesson-remote-info.yaml
Variables/VariableManipulation/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
Variables/VariableManipulation/src/: variableManipulation.cpp
Variables/VariableManipulation/test/: test.cpp
